# pygame-chess

./: .gitignore  BUILDING.md  LICENSE  README.md  TODO.md  ai.py  board.py  build_assets.py  chess.py  constants.py  layout.py  main.py  notation.py  pieces.py  profiles.json  pyproject.toml  rendering.py  strings.py  train_selfplay.py
locale/: de.json  en.json  es.json  fr.json  lt.json  ua.json
src/: constants.py  main.py  profiles.py  savegame.py  strings.py
src/engine/: ai.py  board.py  mcts.py  ml_ai.py  ml_model.py  notation.py  pieces.py
src/game/: app.py  state.py
src/ui/: board_renderer.py  hud_renderer.py  layout.py  menu_renderer.py  rendering.py
