[project]
name = "pygame-chess"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = [
    "cairosvg>=2.9.0",
    "pygame>=2.6.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
